메뉴버튼 이름을 바꾸었음

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="content/uploads/logos/Littlebit_logo_k.png" alt="Littlebit">
                 </a>
                 <div class="navBox">
-                    <a href="#" class="btnMenu">메뉴버튼</a>
+                    <a href="#" class="btnMenu">메뉴버튼2</a>
                     <div class="main-nav" id="main-nav">
                         <ul>
                             <li class>
